<resources>
    <string name="app_name">Simple Calculator app</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter second number</string>
    <string name="add">Add</string>
    <string name="result">Result</string>
    <string name="add_values">+</string>
    <string name="abs_values">-</string>
    <string name="div_values">/</string>
    <string name="mul_values">*</string>
</resources>
